--- a/current/public/index.html
+++ b/current/public/index.html
@@ -140,6 +140,7 @@
 
 <ul>
 <li><a href="https://fosstodon.org/@mthehorrible">Mastodon</a></li>
+<li><a href="https://pixelfed.social/i/web/profile/500285952783711306">pixelfed</a></li>
 <li><a href="https://github.com/mthehorrible">Github</a></li>
 <li><a href="https://www.linkedin.com/in/matt-milliman-38272227">LinkedIn</a></li>
 <li><a href="https://xrandomness.com">xRandomNESS</a></li>
